...
  }

  return (
    <AppScreen
      description={t('calendar.description')}
      descriptionTestID="calendar-description"
      testID="calendar-screen"
      title={t('calendar.title')}
      titleTestID="calendar-screen-title"
    >
      <Calendar
        selectedDate={selectedDate}
        onDateSelect={handleDateSelect}
...
